--- a/package.json
+++ b/package.json
@@ -2,25 +2,28 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
+    "@tsconfig/svelte": "^5.0.4",
+    "@types/node": "^16.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "mini-css-extract-plugin": "^2.6.0",
-    "svelte": "^4.0.0",
+    "svelte": "^5.20.0",
+    "svelte-check": "^3.4.4",
     "svelte-loader": "^3.1.9",
+    "svelte-preprocess": "^5.0.4",
+    "ts-loader": "^9.0.0",
+    "tslib": "^2.5.0",
+    "typescript": "^5.0.0",
     "webpack": "^5.70.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "ts-loader": "^9.0.0",
-    "@tsconfig/svelte": "^4.0.0",
-    "@types/node": "^16.0.0",
-    "svelte-check": "^3.4.4",
-    "svelte-preprocess": "^5.0.4",
-    "tslib": "^2.5.0",
-    "typescript": "^5.0.0"
+    "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
     "dev": "webpack serve",
     "validate": "svelte-check"
+  },
+  "dependencies": {
+    "i18next": "^24.2.2"
   }
 }
