--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "svelte-app",
   "version": "1.0.0",
+  "type": "module",
   "devDependencies": {
     "@tsconfig/svelte": "^5.0.4",
     "@types/node": "^16.0.0",
@@ -10,7 +11,7 @@
     "svelte": "^5.20.0",
     "svelte-check": "^3.4.4",
     "svelte-loader": "^3.1.9",
-    "svelte-preprocess": "^5.0.4",
+    "svelte-preprocess": "^6.0.3",
     "ts-loader": "^9.0.0",
     "tslib": "^2.5.0",
     "typescript": "^5.0.0",
