--- a/package.json
+++ b/package.json
@@ -1,30 +1,54 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
-  "type": "module",
-  "devDependencies": {
-    "@tsconfig/svelte": "^5.0.4",
-    "@types/node": "^16.0.0",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.7.1",
-    "mini-css-extract-plugin": "^2.6.0",
-    "svelte": "^5.20.0",
-    "svelte-check": "^3.4.4",
-    "svelte-loader": "^3.1.9",
-    "svelte-preprocess": "^6.0.3",
-    "ts-loader": "^9.0.0",
-    "tslib": "^2.5.0",
-    "typescript": "^5.0.0",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
-  },
-  "scripts": {
-    "build": "cross-env NODE_ENV=production webpack",
-    "dev": "webpack serve",
-    "validate": "svelte-check"
-  },
-  "dependencies": {
-    "i18next": "^24.2.2"
-  }
+	"private": true,
+	"scripts": {
+		"build": "cross-env NODE_ENV=production webpack",
+		"dev": "webpack serve",
+		"start": "serve public --listen 8080",
+		"validate": "svelte-check"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.0.0",
+		"@babel/plugin-transform-runtime": "^7.0.0",
+		"@babel/preset-env": "^7.0.0",
+		"@babel/runtime": "^7.0.0",
+		"@tsconfig/svelte": "^5.0.4",
+		"@types/node": "^22.13.4",
+		"autoprefixer": "^10.0.0",
+		"babel-loader": "^9.0.0",
+		"clean-webpack-plugin": "^4.0.0",
+		"core-js": "^3.0.0",
+		"cross-env": "^7.0.0",
+		"css-loader": "^7.0.0",
+		"css-minimizer-webpack-plugin": "^7.0.0",
+		"mini-css-extract-plugin": "^2.0.0",
+		"postcss": "^8.0.0",
+		"postcss-loader": "^8.0.0",
+		"regenerator-runtime": "^0.14.0",
+		"require-json5": "^1.0.0",
+		"sass": "^1.0.0",
+		"sass-loader": "^16.0.0",
+		"svelte": "^5.20.1",
+		"svelte-check": "^4.1.4",
+		"svelte-check-plugin": "^1.0.4",
+		"svelte-loader": "^3.2.4",
+		"svelte-preprocess": "^6.0.3",
+		"ts-loader": "^9.0.0",
+		"ts-node": "^10.0.0",
+		"typescript": "^5.0.0",
+		"webpack": "^5.0.0",
+		"webpack-cli": "^5.0.0",
+		"webpack-dev-server": "^5.0.0"
+	},
+	"dependencies": {
+		"i18next": "^24.2.2",
+		"serve": "^14.0.0"
+	},
+	"browserslist": [
+		"defaults"
+	],
+	"overrides": {
+		"serve": {
+			"path-to-regexp": "^3.3.0"
+		}
+	}
 }
